# FormalAlgo

./: CMakeLists.txt  README.md  _run_tests.sh  run.sh
project/: CMakeLists.txt  main.cpp
project/include/: Algo.h  Configuration.h  ConfigurationSet.h  Earley.h  Grammar.h  Instruction.h  NodeLR.h  ParserLR.h  Rule.h  Situation.h  SituationLR.h
project/src/: Configuration.cpp  ConfigurationSet.cpp  Earley.cpp  Grammar.cpp  Instruction.cpp  NodeLR.cpp  ParserLR.cpp
test/: CMakeLists.txt  test.cpp
